--- a/app/Resources/views/default/ustawienia.html.twig
+++ b/app/Resources/views/default/ustawienia.html.twig
@@ -17,6 +17,9 @@
             {{ form_row(form.miasto) }}
             {{ form_row(form.adres) }}
             {{ form_row(form.kodPocztowy) }}
+            {{ form_row(form.wynagrodzenieNotariusza) }}
+            {{ form_row(form.oplataZaWpisDoRejestruSpadkowego) }}
+            {{ form_row(form.kosztStrony) }}
 
             <button class="btn btn-primary pull-right" style="float: right;" type="submit">Zapisz</button>
             {{ form_end(form) }}
